test/bad/generics/def03.px

func f<T>(x: T): T def
    return T

f(true)
